Pointing to Git for Pod to get latest changes for Travis Build

--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProjectTestBundleSupportTestsMac.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProjectTestBundleSupportTestsMac.xcscheme
@@ -21,6 +21,20 @@
                BlueprintName = "OCSlimProjectTestBundleSupportTestsMac"
                ReferencedContainer = "container:OCSlimProject.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "OCSPTestSuite">
+               </Test>
+               <Test
+                  Identifier = "OCSPTestSuite/OCSlimProjectExampleSuite">
+               </Test>
+               <Test
+                  Identifier = "OCSPTestSuiteTestable">
+               </Test>
+               <Test
+                  Identifier = "OCSPTestSuiteXCodeFixDisabled">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <AdditionalOptions>
