--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
+- gem install xcpretty-travis-formatter
 osx_image: xcode7.3
 script:
+- set -o pipefail && xcrun xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test | xcpretty -f `xcpretty-travis-formatter`
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
