--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ before_install:
 osx_image: xcode7.3
 script:
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
-
+#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
+#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
+#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
 #- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-OSX -sdk  macosx build test
 #- pod lib lint OCSlimProject.podspec --allow-warnings
 #- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
