Adds target version to example podfile entry for Mac targets

--- a/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -5,7 +5,7 @@
 	<key>Macros</key>
 	<dict>
 		<key>POD_PLATFORM_IDENTIFIER</key>
-		<string>osx</string>
+		<string>osx, 10.8</string>
 	</dict>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
