--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.3
 script:
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
+#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
+- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
 #- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
 #- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
 #- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
