--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,20 +2,20 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 target 'OCSlimProject_AcceptanceTests' do
   platform :ios, 9.0
-  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
 end
 
 target 'OCSlimProject_AcceptanceTestsMac' do
   platform :osx, 10.8
-  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
 end
 
 target 'OCSlimProject_AcceptanceUnitTestBundle' do
     platform :ios, 9.0
-    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
+    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
  end
 
 target 'OCSlimProject_AcceptanceUnitTestBundleMac' do
     platform :osx, 10.8
-    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
+    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
 end
