--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-pod 'cslim', :git => "https://github.com/paulstringer/cslim.git", :branch => "ocslim-debug"
+#pod 'cslim', :git => "https://github.com/paulstringer/cslim.git", :branch => "ocslim-debug"
 
 target 'OCSlimProject_AcceptanceTests' do
   platform :ios, 9.0
