--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,23 +1,21 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-#pod 'cslim', :git => "https://github.com/paulstringer/cslim.git", :branch => "ocslim-debug"
-
 target 'OCSlimProject_AcceptanceTests' do
   platform :ios, 9.0
-  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
 
 target 'OCSlimProject_AcceptanceTestsMac' do
   platform :osx, 10.8
-  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
 
 target 'OCSlimProject_AcceptanceUnitTestBundle' do
     platform :ios, 9.0
-    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
+    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
  end
 
 target 'OCSlimProject_AcceptanceUnitTestBundleMac' do
     platform :osx, 10.8
-    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "12-XCTest-Extend-Slim-Timeout"
+    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
