--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
 - pod lib lint OCSlimProject.podspec --allow-warnings
-#- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
+- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
