--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
+- brew update # Since Travis is not always on latest version
+#- brew install node
+#- npm install ios-sim g
 osx_image: xcode7.3
 script:
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
