Enable Travis Builds for iOS and Bundle Support Tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ osx_image: xcode8
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - brew update # Since Travis is not always on latest version
-- npm install ios-sim g
+- npm install ios-sim -g
 script:
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk iphonesimulator test
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -sdk iphonesimulator test
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone 6s' test
+#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
+#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone 6s' test
 #- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
-- pod lib lint OCSlimProject.podspec --allow-warnings
-- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
+#- pod lib lint OCSlimProject.podspec --allow-warnings
+#- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
