Adds a boiler plate unit test bundle. This is expicitly called out via a scheme as a target which when run prepares the simulator so that it's ready for use by Fitnesse and ios-sim. By running this simple test first via Xcode we prep the simulator and avoid issues caused by extremely long Simulator startup on VM images with fresh installs. These would cause problems when attempting to run the tests with Fitnesse.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ before_install:
 - brew update # Since Travis is not always on latest version
 - npm install ios-sim -g
 script:
-# OCSlimProjectTestBundleSupport Pod Unit Tests
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone 6s' test
 # OCSlimProject Example Acceptance Tests
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_AcceptanceUnitTestBundle_SimulatorWarmUpExcercise -destination 'platform=iOS Simulator,name=iPhone 6s' test
 - set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone 6s' test
+#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
+# OCSlimProjectTestBundleSupport Pod Unit Tests
+#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone 6s' test
+#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
 # Pod Lib Lint
 #- pod lib lint OCSlimProject.podspec --allow-warnings
 #- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
