--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ osx_image: xcode9
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 
+script:
 # OCSlimProject Example Acceptance Tests (iOS, macOS)
 - set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_AcceptanceUnitTestBundle_SimulatorWarmUpExcercise -destination 'platform=iOS Simulator,name=iPhone X' -destination-timeout 300 test
 - set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone X' test
