--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ podfile: Example/Podfile
 osx_image: xcode9
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-
+- gem install xcpretty # Tidy up Xcode Logs to make it easier to read when the build fails
 script:
 # OCSlimProject Example Acceptance Tests (iOS, macOS)
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone X' -destination-timeout 300 test
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone X' -destination-timeout 300 test | | xcpretty
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test | xcpretty
 # OCSlimProjectTestBundleSupport Pod Unit Tests (iOS, macOS)
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone X' test
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone X' test | xcpretty
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test | xcpretty
 # Pod Lib Lint (unavailable on xcode 8)
 #- pod lib lint OCSlimProject.podspec --allow-warnings
 #- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
