--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
+osx_image: xcode11.3
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 
