--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ osx_image: xcode11.3
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 
+env:
+ global:
+   - DEVICE_NAME='iphone 11'
+
 script:
 # OCSlimProject Example Acceptance Tests (iOS, macOS)
-- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination 'platform=iOS Simulator,name=iPhone X' -destination-timeout 300 test
+- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination "platform=iOS Simulator,name=$DEVICE_NAME" -destination-timeout 300 test
 - set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
 # OCSlimProjectTestBundleSupport Pod Unit Tests (iOS, macOS)
 - set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone X' test
