--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,23 @@ podfile: Example/Podfile
 osx_image: xcode11.3
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-
-env:
- global:
-   - DEVICE_NAME='iphone 11'
    
 xcode_workspace: Example/OCSlimProject.xcworkspace
 xcode_destination: platform=iOS Simulator,name=iphone 11
       
 jobs:
   include:
-    - xcode_scheme: OCSlimProject_Example
-    - xcode_scheme: OCSlimProjectTestBundleSupportTests
-    - xcode_scheme: OCSlimProject_ExampleMac
+    - name: Build & Test Example (macOS)
+      xcode_scheme: OCSlimProject_ExampleMac
       xcode_destination: platform=macOS
-    - xcode_scheme: OCSlimProjectTestBundleSupportTestsMac
+    - name: Run Test Bundle Unit Tests (macOS)
+      xcode_scheme: OCSlimProjectTestBundleSupportTestsMac
       xcode_destination: platform=macOS
+    - name: Build & Test Example (iOS)
+      xcode_scheme: OCSlimProject_Example
+    - name: Run Test Bundle Unit Tests (iOS)
+      xcode_scheme: OCSlimProjectTestBundleSupportTests
 
-
-script:
-# OCSlimProject Example Acceptance Tests (iOS, macOS)
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -destination "platform=iOS Simulator,name=$DEVICE_NAME" -destination-timeout 300 test
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_ExampleMac test
-# OCSlimProjectTestBundleSupport Pod Unit Tests (iOS, macOS)
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTests -destination 'platform=iOS Simulator,name=iPhone X' test
-#- set -o pipefail && xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProjectTestBundleSupportTestsMac test
 # Pod Lib Lint (unavailable on xcode 8)
 #- pod lib lint OCSlimProject.podspec --allow-warnings
 #- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
