--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProjectTestBundleSupportTests.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProjectTestBundleSupportTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8C4186E71D7DAD42006FDB55"
+               BuildableName = "OCSlimProject_AcceptanceTests.app"
+               BlueprintName = "OCSlimProject_AcceptanceTests"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -42,6 +58,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8C4186E71D7DAD42006FDB55"
+            BuildableName = "OCSlimProject_AcceptanceTests.app"
+            BlueprintName = "OCSlimProject_AcceptanceTests"
+            ReferencedContainer = "container:OCSlimProject.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -49,6 +75,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8C4186E71D7DAD42006FDB55"
+            BuildableName = "OCSlimProject_AcceptanceTests.app"
+            BlueprintName = "OCSlimProject_AcceptanceTests"
+            ReferencedContainer = "container:OCSlimProject.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
