--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+os:
+- osx
+
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
@@ -10,17 +13,19 @@ xcode_destination: platform=iOS Simulator,name=iphone 11
       
 jobs:
   include:
-    - name: Build & Test Example (macOS)
+    - name: "Build & Test Example (macOS)"
       xcode_scheme: OCSlimProject_ExampleMac
       xcode_destination: platform=macOS
-    - name: Run Test Bundle Unit Tests (macOS)
+    - name: "Run Test Bundle Unit Tests (macOS)"
       xcode_scheme: OCSlimProjectTestBundleSupportTestsMac
       xcode_destination: platform=macOS
-    - name: Build & Test Example (iOS)
+    - name: "Build & Test Example (iOS)"
       xcode_scheme: OCSlimProject_Example
-    - name: Run Test Bundle Unit Tests (iOS)
+    - name: "Run Test Bundle Unit Tests (iOS)"
       xcode_scheme: OCSlimProjectTestBundleSupportTests
+    - name: "Pod library lint"
+      script: 
+      - pod lib lint OCSlimProject.podspec --allow-warnings
+      - pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
 
-# Pod Lib Lint (unavailable on xcode 8)
-#- pod lib lint OCSlimProject.podspec --allow-warnings
-#- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
+
